--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConnection": "Data Source=.;Initial Catalog=AdminCore;Persist Security Info=True;User ID=sa;Password=8023"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
